[package]
name = "aoc_template_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-client = "0.2.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
console = "0.15.8"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
paste = "1.0.15"
